# mlir-emitc

./: .gitignore  CMakeLists.txt  CMakeSettings.json  llvm.natvis  mlir-emitc.code-workspace  tblgenscripts.ps1
es2dsl/: CMakeLists.txt  es2dslmain.cpp  toyc.cpp
es2dsl/data/Ch2/: empty.toy
es2dsl/inc/: CMakeLists.txt
es2dsl/inc/es2dsl/dialect/: es2mlirpasses.h  es2tolvabase.td  es2tolvadialect.h  es2tolvaops.cpp.inl  es2tolvaops.h  es2tolvaops.h.inl  es2tolvaops.td  es2tolvaops_opdecl.h  es2tolvaops_opdef.h
es2dsl/inc/es2dsl/subsys/: es2mlirsubsys.h  es2tlvast.h
es2dsl/src/dialect/: es2mlirpasses.cpp  es2mlirsubsys.cpp  es2tolvadialect.cpp  es2tolvaops.cpp
es2dsl/src/subsys/: es2mlirsubsys.cpp
es2dsl/test/: dummy.mlir  dummy.toy
ext/: CMakeLists.txt
ext/es2dsl/: .clang-format  CMakeLists.txt  es2dslmain.cpp
ext/es2dsl/inc/es2dsl/dialect/: CMakeLists.txt  es2mlirpasses.h  es2tlv_base.td  es2tlv_canonical.td  es2tlv_ops.td  es2tolvabase.td  es2tolvadialect.h  es2tolvaops.h  es2tolvaops.td  es2tolvapasses.h
ext/es2dsl/inc/es2dsl/subsys/: es2mlirsubsys.h
ext/es2dsl/inc/es2dsl/tblgen/: es2tlv_base.h.inl  es2tlv_canonical.inl  es2tlv_ops.cpp.inl  es2tlv_ops.h.inl  es2tolvaops.h.inl
ext/es2dsl/src/dialect/: es2mlirpasses.cpp  es2tlv_canonical.cpp  es2tlv_cppemitter.cpp  es2tlv_lowertoaffine.cpp  es2tlv_lowertocpp.cpp  es2tlv_lowertollvm.cpp  es2tlv_ops.cpp  es2tlv_shapeinfer.cpp  es2tolvadialect.cpp  es2tolvaops.cpp
ext/es2dsl/src/subsys/: es2mlirsubsys.cpp  es2mlirsubsys_mlirgen.cpp
ext/es2dsl/test/: dummy.mlir
ext/toych1/: CMakeLists.txt
ext/toych2/: CMakeLists.txt
ext/toych3/: CMakeLists.txt  toych3main.cpp
ext/toych4/: CMakeLists.txt
ext/toych5/: CMakeLists.txt
ext/toych6/: CMakeLists.txt
ext/toych7/: CMakeLists.txt
ext/toydata/Ch2/: ast.toy  codegen.toy  invalid.mlir  scalar.toy
include/emitc/: emitc_mhlo.h
unittests/: emitc_mhlo.cpp
