add_custom_target(Toy)
set_target_properties(Toy PROPERTIES FOLDER Examples)

macro(add_toy_chapter name)
  add_dependencies(Toy ${name})
  add_llvm_example(${name} ${ARGN})
endmacro(add_toy_chapter name)

# add_subdirectory(Ch1)
# add_subdirectory(es2dsl)
# add_subdirectory(Ch3)
# add_subdirectory(Ch4)
# add_subdirectory(Ch5)
# add_subdirectory(Ch6)
# add_subdirectory(Ch7)

# For a better template to copy, see examples/standalone
add_subdirectory(include)
add_subdirectory(inc)

set(LLVM_LINK_COMPONENTS
  Support
  )

add_toy_chapter(toyc-ch2
  toyc.cpp
  parser/AST.cpp
  mlir/MLIRGen.cpp
  mlir/Dialect.cpp
  src/dialect/es2tolvadialect.cpp
  src/dialect/es2tolvaops.cpp
  src/dialect/es2mlirsubsys.cpp

  DEPENDS
  ToyCh2OpsIncGen

  )
include_directories(include/)
include_directories(inc/)
include_directories(${CMAKE_CURRENT_BINARY_DIR}/include/)
target_link_libraries(toyc-ch2
  PRIVATE
    MLIRAnalysis
    MLIRIR
    MLIRParser
    MLIRSideEffectInterfaces
    MLIRTransforms)
